k8s/backend.yaml
# ---------- Deployment (el contenedor del Backend) ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: devIbrahim14/pachangapp-backend:latest
          ports:
            - containerPort: 8091
---
# ---------- Service (expone el Backend al Ingress y al exterior en puerto 8091) ----------
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8091
      targetPort: 8091
  type: ClusterIP
