k8s/frontend.yaml
# ---------- Deployment (el contenedor del Frontend) ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: devibrahim14/pachangapp-frontend:latest
          ports:
            - containerPort: 80

---
# ---------- Service (expone el Frontend al Ingress) ----------
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
